removing old pre 0.6.0 stuff

--- a/client/templates/addaquestion.html
+++ b/client/templates/addaquestion.html
@@ -10,7 +10,7 @@
         <a class="close" href="#">×</a>
         <strong><span id="alert-title-question"></span></strong> <span id="alert-message-question"></span>
       </div>
-      <form class"form-horizontal" id="addaquestion-form">
+      <form class="form-horizontal" id="addaquestion-form">
         <fieldset>
           <div class="control-group">
             <label class="control-label" for="email">your email</label>
@@ -30,7 +30,7 @@
           </div>
           <div id="progress-question" class="progress progress-striped active hide">
             <div id="bar-question" class="bar" style="width: 33%;"></div>
-          </div> 
+          </div>
         </fieldset>
       </form>
     </div>
