fixing entry form

--- a/client/templates/about.html
+++ b/client/templates/about.html
@@ -5,7 +5,8 @@
       <h1>about</h1>
     </div>
     <div class="modal-body">
-      <p>...anonistream is a real time social stream of consciousness...</p>
+      <p>...anonistream is a real time multi-user anonymous social stream of consciousness...</p>
+      <p>...the last 100 posts are streamed in real-time and shrink and face into oblivion...</p>
       <p>...whatever you post is streamed to our <a href="https://twitter.com/#!/anonistreamin" target="_blank">twitter account</a>...</p>
       <p>...and to our <a href="http://apps.facebook.com/anonistreamin/" target="_blank">facebook app</a>...and our <a href="http://www.facebook.com/pages/anonistreamin-Community/295166627236916/" target="_blank">facebook page</a>....when it all works...</p>
       <p>...everything you post is 100% anonymous...</p>
