--- a/client/templates/entry.html
+++ b/client/templates/entry.html
@@ -1,7 +1,7 @@
 <template name="entry">
   <div class="hero-unit">
     <h1 id="title">anonistream.in</h1>
-    <h3>real-time anonymous social stream of consciousness</h3>
+    <h3>real-time multi-user anonymous social stream of consciousness</h3>
       {{> social_buttons}}
     <div class="well form-inline">
       <div class="controls">
